# ActorScope-AI

./: .gitignore  LICENSE  README.md  export_langgraph_figure.py  main.py  pyproject.toml
adrs/: ADR-001-separate-runtime-state-layers.md  ADR-001-state-structures-simple.md  ADR-002-use-langgraph-for-orchestration.md  ADR-003-hybrid-round-turn-loop.md  ADR-004-single-writer-node-ownership.md  ADR-005-keep-updates-deterministic.md  ADR-006-dual-memory-with-mem0.md  ADR-007-use-typed-prompt-contracts.md  ADR-008-llm-enable-order.md  ADR-009-jsonl-trace-and-round-summaries.md  ADR-010-modular-usecases-architecture.md  ADR-011-graph-visualization-export.md  README.md  system_design_summary.md
artifacts/: final_output.json  summary.md  trace.jsonl
config/: constants.py  settings.py
graph/: builder.py  routing.py
llm/: ollama_client.py  structured_generation.py
memory/: distillation.py  filters.py  mem0_client.py  retrieval.py
nodes/: apply_updates.py  check_stop_conditions.py  evaluate_scenario.py  initialize_world.py  interpret_actors.py  persist_memories.py  retrieve_memories.py  select_actions.py
observability/: artifacts.py  logger.py  serializers.py  trace_models.py
prompts/: action_selection.py  actor_interpretation.py  contracts.py
state_structures/: __init__.py  graph_state.py  states.py
usecases/: demo_organization.py  run_usecase.py  us_iran_regional_crisis.py
