[project]
name = "ActorScope-AI"
version = "0.1.0"
description = ""
authors = [
    {name = "vios",email = "billiosifidis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^1.1.3"
langchain-ollama = "^1.0.1"
mem0ai = "^1.0.9"
pydantic = "^2.10"
pydantic-settings = "^2.13.1"
python-dotenv = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
ruff = "^0.6"
mypy = "^1.15"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
